Fix Android compatibility in native Qwen runtime